<resources>
    <!-- Strings related to Settings -->
    <string-array name="lang_select">
        <item>Deutsch</item>
        <item>Arabisch</item>
    </string-array>
    <string name="language_setting">Sprache</string>
    <string name="lang_dialog_title">Sprache ändern</string>
    <string name="lang_dialog_message">Wählen Sie die Sprache aus:</string>

    <string-array name="tSize_select">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="tSize_setting">Schriftgröße</string>
    <string name="tSize_dialog_title">Schriftgröße ändern</string>
    <string name="tSize_dialog_message">Wählen Sie die Schriftgröße aus:</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="app_name">Tasbeha</string>
    <string name="action_settings">Einstellungen</string>
    <string name="titel_mitternachtslobgesang">Mitternachtslobgesang</string>
    <string name="label_tensino">Tenthino</string>
    <string name="titel_tennaf">Der Auferstehungshymnus</string>
    <string name="label_tennaf">Tennaf</string>
    <string name="label_ersterHoos">Erster Hoos</string>
    <string name="titel_ersterHoos">Der erste Hoos</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="titel_chenushot">Erläuterung des ersten Hoos</string>
    <string name="title_activity_chenushot">Chen Ushot</string>
    <string name="titel_zweiterHoos">Der zweite Hoos</string>
    <string name="label_zweiterHoos">Zweiter Hoos</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="btn_change">Ändern</string>
    <string name="btn_cancel">Abbrechen</string>
    <string name="textSize_setting">Schriftgröße</string>
    <string name="label_marenuonh">Marenuonh</string>
    <string name="titel_marenuonh">Erläuterung des zweiten Hoos</string>
    <string name="titel_dritterHoos">Der dritte Hoos</string>
    <string name="label_dritterHoos">Dritter Hoos</string>
    <string name="titel_aripsalin">Aripsalin</string>
    <string name="label_aripsalin">Aripsalin</string>
    <string name="titel_tenuehEnthok">Hymne für die hl. drei Jünglinge</string>
    <string name="label_tenuehEnthok">Tenueh Enthok</string>
    <string name="titel_gemeinschaft">Die Gemeinschaft der Heiligen</string>
    <string name="label_gemeinschaft">Die Gemeinschaft der Heiligen</string>
    <string name="titel_vierterHoos">Der vierte Hoos</string>
    <string name="label_vierterHoos">Vierter Hoos</string>
    <string name="titel_ersteSoEpsali">Die erste Sonntagsepsali</string>
    <string name="label_ersteSoEpsali">Die erste Sonntagsepsali</string>
    <string name="label_zweiteSoEpsali">Die zweite Sonntagsepsali</string>
    <string name="titel_zweiteSoEpsali">Die zweite Sonntagsepsali</string>
    <string name="titel_einleitungTheotokia">Einleitung der Theotokia</string>
    <string name="label_einleitungTheotokia">Einleitung der Theotokia</string>

</resources>
