<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="at.tasbeha.main.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/titel_mitternachtslobgesang"
        android:id="@+id/btn_tensino"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:onClick="mitternachtslobgesang"
        android:textSize="15dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/titel_tennaf"
        android:id="@+id/btn_tennaf"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:onClick="auferstehungshymnus"
        android:textSize="15dp"
        android:layout_below="@+id/btn_tensino"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/titel_ersterHoos"
        android:id="@+id/btn_ersterHoos"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:onClick="ersterHoos"
        android:textSize="15dp"
        android:layout_below="@+id/btn_tennaf"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/titel_chenushot"
        android:id="@+id/btn_chenushot"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:onClick="chenushot"
        android:textSize="15dp"
        android:layout_below="@+id/btn_ersterHoos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/titel_zweiterHoos"
        android:id="@+id/btn_zweiterHoos"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:onClick="zweiterHoos"
        android:textSize="15dp"
        android:layout_below="@+id/btn_chenushot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
